# search-challenge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.pipeline.yaml
scripts/: build_inverted_index.py
search/: __main__.py
src/: __main__.py  words.py
src/scripts/: build_inverted_index.py
tests/: conftest.py  test_scipts.py  test_words.py
